--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
             <scope>test</scope>
         </dependency>
 
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -54,8 +55,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>6.1.3</version>
+        </dependency>
 
 
     </dependencies>
